--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Luan_Fiorentin" />
 
-<meta name="date" content="2017-05-20" />
+<meta name="date" content="2017-05-27" />
 
 <title>Regulação de florestas</title>
 
@@ -288,7 +288,7 @@ div.tocify {
   <a href="index.html">Projeto: Regulação</a>
 </li>
 <li>
-  <a href="pag2.html">Projeto: Crescimento</a>
+  <a href="pag2.html">Projeto: Amostragem</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -312,7 +312,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Regulação de florestas</h1>
 <h4 class="author"><em>Luan_Fiorentin</em></h4>
-<h4 class="date"><em>2017-05-20</em></h4>
+<h4 class="date"><em>2017-05-27</em></h4>
 
 </div>
 
