--- a/pag2.html
+++ b/pag2.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Luan_Fiorentin" />
 
-<meta name="date" content="2017-05-27" />
+<meta name="date" content="2019-01-26" />
 
 <title>Amostragem de Bitterlich</title>
 
@@ -312,7 +312,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Amostragem de Bitterlich</h1>
 <h4 class="author"><em>Luan_Fiorentin</em></h4>
-<h4 class="date"><em>2017-05-27</em></h4>
+<h4 class="date"><em>2019-01-26</em></h4>
 
 </div>
 
@@ -333,8 +333,14 @@ div.tocify {
 <ul>
 <li><p>A escolha do fator de área basal influencia diretamente na precisão dos estimadores populacionais, o que pode gerar estimativas precisas ou tendenciosas dos resultados do inventário florestal..</p></li>
 <li><p>O método de amostragem de Bitterlich é preciso para estimar as variáveis da floresta, sendo mais apropriado para o estimador de área basal.</p></li>
-<li><p>Os resultados obtidos nesse estudo evidenciam que os estimadores do número de árvores, área basal e volume por hectare são mais consistentes quando se utiliza os fatores de área basal igual ou menores que 1para a população amostrada. Entretanto como o fator de área basal 1 atendeu a condição com o mínimo número de árvores, esse será o mais apropriado para também atender a condição de mínimo custo, o que comprova a hipótese formulada no presente trabalho. <br /> <br /></p></li>
+<li>Os resultados obtidos nesse estudo evidenciam que os estimadores do número de árvores, área basal e volume por hectare são mais consistentes quando se utiliza os fatores de área basal igual ou menores que 1para a população amostrada. Entretanto como o fator de área basal 1 atendeu a condição com o mínimo número de árvores, esse será o mais apropriado para também atender a condição de mínimo custo, o que comprova a hipótese formulada no presente trabalho.</li>
+<li><p>Testando… 1, 2, 3…</p></li>
 </ul>
+<p><br /> <br /></p>
+<div class="figure">
+<img src="bitterlich.png" />
+
+</div>
 </div>
 
 
