--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="Luan_Fiorentin" />
 
-<meta name="date" content="2017-05-27" />
+<meta name="date" content="2019-01-26" />
 
-<title>Regulação de florestas</title>
+<title>Floresta</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -310,9 +310,9 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Regulação de florestas</h1>
+<h1 class="title toc-ignore">Floresta</h1>
 <h4 class="author"><em>Luan_Fiorentin</em></h4>
-<h4 class="date"><em>2017-05-27</em></h4>
+<h4 class="date"><em>2019-01-26</em></h4>
 
 </div>
 
@@ -324,9 +324,12 @@ div.tocify {
 </div>
 <div id="objetivos" class="section level1">
 <h1><span class="header-section-number">2</span> Objetivos</h1>
-<p><br /> ## Objetivo geral <br /></p>
+<p><br /> <em>Objetivo geral</em> <br /></p>
 <ul>
-<li><p>O objetivo geral do presente estudo foi planejar a produção volumétrica e realizar o agendamento da colheita dos povoamentos de Pinus elliottii e Pinus taeda, localizados na região de Caçador, no estado de Santa Catarina, Brasil. <br /> <br /> ## Objetivos específicos <br /></p></li>
+<li>O objetivo geral do presente estudo foi planejar a produção volumétrica e realizar o agendamento da colheita dos povoamentos de Pinus elliottii e Pinus taeda, localizados na região de Caçador, no estado de Santa Catarina, Brasil. <br /></li>
+</ul>
+<p><em>Objetivos específicos</em> <br /></p>
+<ul>
 <li><p>Classificar as áreas florestais quanto a sua produtividade, por meio de modelos estatísticos não lineares e construir curvas anamórficas de índice de sítio, para os povoamentos de Pinus elliottii e Pinus taeda;</p></li>
 <li><p>Ajustar o modelo de afilamento polinomial de 5° Grau e analisar estatisticamente o seu desempenho para estimar o volume total das árvores de Pinus spp. para cada idade e para o conjunto total dos dados;</p></li>
 <li><p>Analisar a estrutura dos povoamentos florestais pré-regulação e testar diferentes estratégias de otimização para regular o volume de sortimentos dos povoamentos de Pinus spp. <br /> <br /></p></li>
@@ -337,9 +340,15 @@ div.tocify {
 <p><br /></p>
 <ul>
 <li><p>A programação linear é uma ferramenta matemática que proporciona resultados satisfatórios na otimização e regulação da estrutura volumétrica dos povoamentos florestais e deve ser utilizada como uma técnica de auxílio ao planejamento da produção florestal.</p></li>
-<li>As diferentes estratégias de otimização desenvolvidas conseguem regular a estrutura volumétrica dos povoamentos florestais e são capazes de resolver o problema de otimização desenvolvido nesse estudo, independente da sua formulação matemática.</li>
-<li><p>As estratégias de otimização utilizadas conduzem de forma diferenciada as atividades silviculturais de desbastes e corte raso e a escolha de determinado modelo de regulação florestal deve ser realizada com base na preferência do empreendimento florestal. <br /> <br /></p></li>
+<li><p>As diferentes estratégias de otimização desenvolvidas conseguem regular a estrutura volumétrica dos povoamentos florestais e são capazes de resolver o problema de otimização desenvolvido nesse estudo, independente da sua formulação matemática.</p></li>
+<li>As estratégias de otimização utilizadas conduzem de forma diferenciada as atividades silviculturais de desbastes e corte raso e a escolha de determinado modelo de regulação florestal deve ser realizada com base na preferência do empreendimento florestal.</li>
+<li><p>Testando… 1, 2, 3, eitaaa…</p></li>
 </ul>
+<p><br /> <br /></p>
+<div class="figure">
+<img src="regulated.png" />
+
+</div>
 </div>
 
 
