--- a/pag2.html
+++ b/pag2.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Luan_Fiorentin" />
 
-<meta name="date" content="2019-01-26" />
+<meta name="date" content="2019-01-27" />
 
 <title>Amostragem de Bitterlich</title>
 
@@ -312,35 +312,15 @@ div.tocify {
 
 <h1 class="title toc-ignore">Amostragem de Bitterlich</h1>
 <h4 class="author"><em>Luan_Fiorentin</em></h4>
-<h4 class="date"><em>2019-01-26</em></h4>
+<h4 class="date"><em>2019-01-27</em></h4>
 
 </div>
 
 
 <p><br /> <br /></p>
-<div id="introducao" class="section level1">
-<h1><span class="header-section-number">1</span> Introdução</h1>
-<p><br /> O método de amostragem de Bitterlich apresenta grande potencial de aplicação em florestas nativas, onde a sua vantagem em relação a outros métodos de amostragem está na rapidez de instalação e medição da unidade amostral, proporcionando menores custos ao inventário. Segundo Farias et al. (2002), devido à simplicidade do procedimento para obtenção dos dados, a aplicação desse método pode ser de extrema utilidade, principalmente quando é necessário um diagnóstico rápido do estoque de madeira e de outras características de florestas inequiâneas, que por sua natureza demandam maiores esforços de amostragem. <br /> <br /></p>
-</div>
-<div id="objetivos" class="section level1">
-<h1><span class="header-section-number">2</span> Objetivos</h1>
-<p><br /></p>
-<p>Devido à importância do método de amostragem de Bitterlich para os inventários realizados em florestas inequiâneas e heterogêneas em espécies, formalizou-se como objetivo avaliar o efeito do fator de área basal nos estimadores populacionais de diâmetro médio, número de árvores, área basal e volume por hectare, bem como nas respectivas frequências por classe de diâmetro, em um fragmento de Floresta Ombrófila Mista. <br /> <br /></p>
-</div>
-<div id="conclusao" class="section level1">
-<h1><span class="header-section-number">3</span> Conclusão</h1>
-<p><br /></p>
-<ul>
-<li><p>A escolha do fator de área basal influencia diretamente na precisão dos estimadores populacionais, o que pode gerar estimativas precisas ou tendenciosas dos resultados do inventário florestal..</p></li>
-<li><p>O método de amostragem de Bitterlich é preciso para estimar as variáveis da floresta, sendo mais apropriado para o estimador de área basal.</p></li>
-<li>Os resultados obtidos nesse estudo evidenciam que os estimadores do número de árvores, área basal e volume por hectare são mais consistentes quando se utiliza os fatores de área basal igual ou menores que 1para a população amostrada. Entretanto como o fator de área basal 1 atendeu a condição com o mínimo número de árvores, esse será o mais apropriado para também atender a condição de mínimo custo, o que comprova a hipótese formulada no presente trabalho.</li>
-<li><p>Testando… 1, 2, 3…</p></li>
-</ul>
-<p><br /> <br /></p>
-<div class="figure">
-<img src="bitterlich.png" />
-
-</div>
+<div id="introdu" class="section level1">
+<h1><span class="header-section-number">1</span> Introdu</h1>
+<p><br /> O metodo de amostragem de Bitterlich apresenta grande potencial.</p>
 </div>
 
 
