--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Luan_Fiorentin" />
 
-<meta name="date" content="2019-01-26" />
+<meta name="date" content="2019-01-27" />
 
 <title>Floresta</title>
 
@@ -312,43 +312,15 @@ div.tocify {
 
 <h1 class="title toc-ignore">Floresta</h1>
 <h4 class="author"><em>Luan_Fiorentin</em></h4>
-<h4 class="date"><em>2019-01-26</em></h4>
+<h4 class="date"><em>2019-01-27</em></h4>
 
 </div>
 
 
 <p><br /> <br /></p>
-<div id="introducao" class="section level1">
-<h1><span class="header-section-number">1</span> Introdução</h1>
-<p><br /> Definir diferentes estratégias de regulação é um processo essencial no planejamento, para permitir que alternativas de manejo estejam disponíveis na tomada de decisão e evitar que os empreendimentos fiquem suscetíveis às oscilações do mercado, especialmente quando o horizonte de planejamento envolvido é de longo prazo. <br /> <br /></p>
-</div>
-<div id="objetivos" class="section level1">
-<h1><span class="header-section-number">2</span> Objetivos</h1>
-<p><br /> <em>Objetivo geral</em> <br /></p>
-<ul>
-<li>O objetivo geral do presente estudo foi planejar a produção volumétrica e realizar o agendamento da colheita dos povoamentos de Pinus elliottii e Pinus taeda, localizados na região de Caçador, no estado de Santa Catarina, Brasil. <br /></li>
-</ul>
-<p><em>Objetivos específicos</em> <br /></p>
-<ul>
-<li><p>Classificar as áreas florestais quanto a sua produtividade, por meio de modelos estatísticos não lineares e construir curvas anamórficas de índice de sítio, para os povoamentos de Pinus elliottii e Pinus taeda;</p></li>
-<li><p>Ajustar o modelo de afilamento polinomial de 5° Grau e analisar estatisticamente o seu desempenho para estimar o volume total das árvores de Pinus spp. para cada idade e para o conjunto total dos dados;</p></li>
-<li><p>Analisar a estrutura dos povoamentos florestais pré-regulação e testar diferentes estratégias de otimização para regular o volume de sortimentos dos povoamentos de Pinus spp. <br /> <br /></p></li>
-</ul>
-</div>
-<div id="conclusao" class="section level1">
-<h1><span class="header-section-number">3</span> Conclusão</h1>
-<p><br /></p>
-<ul>
-<li><p>A programação linear é uma ferramenta matemática que proporciona resultados satisfatórios na otimização e regulação da estrutura volumétrica dos povoamentos florestais e deve ser utilizada como uma técnica de auxílio ao planejamento da produção florestal.</p></li>
-<li><p>As diferentes estratégias de otimização desenvolvidas conseguem regular a estrutura volumétrica dos povoamentos florestais e são capazes de resolver o problema de otimização desenvolvido nesse estudo, independente da sua formulação matemática.</p></li>
-<li>As estratégias de otimização utilizadas conduzem de forma diferenciada as atividades silviculturais de desbastes e corte raso e a escolha de determinado modelo de regulação florestal deve ser realizada com base na preferência do empreendimento florestal.</li>
-<li><p>Testando… 1, 2, 3, eitaaa…</p></li>
-</ul>
-<p><br /> <br /></p>
-<div class="figure">
-<img src="regulated.png" />
-
-</div>
+<div id="introdu" class="section level1">
+<h1><span class="header-section-number">1</span> Introdu</h1>
+<p><br /> Definir diferentes …</p>
 </div>
 
 
